--- a/style/style.css
+++ b/style/style.css
@@ -36,7 +36,7 @@ body {
 .content .content__image {
   width: 377px;
   height: 318px;
-  background-image: url("assets/welcome.svg");
+  background-image: url("../assets/welcome.svg");
   background-repeat: no-repeat;
   margin-bottom: 26px;
 }
