--- a/style/style.scss
+++ b/style/style.scss
@@ -31,7 +31,7 @@ body {
   .content__image {
     width: 377px;
     height: 318px;
-    background-image: url("assets/welcome.svg");
+    background-image: url("../assets/welcome.svg");
     background-repeat: no-repeat;
     margin-bottom: 26px;
   }
