--- a/style/style.css
+++ b/style/style.css
@@ -160,5 +160,45 @@ form button:hover {
     opacity: 1;
   }
 }
+@media (max-width: 995px) {
+  .container {
+    flex-direction: column;
+  }
+  .content {
+    width: 100%;
+    padding-top: 70px;
+    margin-bottom: 100px;
+  }
+  .content h1 {
+    display: none;
+  }
+  form {
+    margin: 0 auto;
+  }
+  form input {
+    width: 35em;
+  }
+}
+@media (max-width: 750px) {
+  form {
+    padding: 20px;
+  }
+}
+@media (max-width: 520px) {
+  form input {
+    width: 25em;
+  }
+}
+@media (max-width: 390px) {
+  .content .content__image {
+    width: 320px;
+    margin-bottom: 0px;
+    background-size: contain;
+    background-position: top center;
+  }
+  form input {
+    width: 21em;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
