--- a/style/style.scss
+++ b/style/style.scss
@@ -80,7 +80,7 @@ form {
     color: var(--yellow);
     margin-bottom: 0px;
   }
-  
+
   button {
     height: 36px;
     background-color: var(--yellow);
@@ -138,7 +138,7 @@ form {
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
-    color:var(--dark-blue);
+    color: var(--dark-blue);
     text-transform: uppercase;
   }
 }
@@ -151,3 +151,51 @@ form {
     opacity: 1;
   }
 }
+
+@media (max-width: 995px) {
+  .container {
+    flex-direction: column;
+  }
+  .content {
+    width: 100%;
+    padding-top: 70px;
+    margin-bottom: 100px;
+    h1 {
+      display: none;
+    }
+  }
+  form {
+    margin: 0 auto;
+    input {
+      width: 35em;
+    }
+  }
+}
+@media (max-width: 750px) {
+  form {
+    padding: 20px;
+  }
+}
+@media (max-width: 520px) {
+  form {
+    input {
+      width: 25em;
+    }
+  }
+}
+@media (max-width: 390px) {
+  .content {
+    .content__image {
+      width: 320px;
+      margin-bottom: 0px;
+      background-size: contain;
+      background-position: top center;
+    }
+  }
+  form {
+    input {
+      width: 21em;
+    }
+  }
+}
+
