--- a/style/style.scss
+++ b/style/style.scss
@@ -192,10 +192,23 @@ form {
       background-position: top center;
     }
   }
+  
+}
+@media (max-width: 370px) {
   form {
+    padding: 5px;
+    margin-left: 20px;
     input {
-      width: 21em;
+      width: 23em;
     }
+    button{
+      width: 18em;
+    }
+  }
+}
+@media (max-width: 340px) {
+  form {
+    margin-left: 5px;
   }
 }
 
